--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ body {
 }
 
 h1 {
-  color:#419D78;
+  color:#E06D06;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 25px;
 }
 
 h2 {
-  color:#419D78;
+  color:#E06D06;
   font-family: 'Hind', sans-serif;
   font-weight: 300;
   text-align: center;
@@ -22,14 +22,14 @@ h2 {
 }
 
 h3 {
-  color:#419D78;
+  color:#E06D06;
   font-family: 'Hind', sans-serif;
   font-weight: 300;
   font-size: 18px;
 }
 
 a {
-  color: #419D78;
+  color: #E06D06;
   text-decoration: none;
 }
 
@@ -53,14 +53,14 @@ a:hover {
   max-width: 700px;
   margin: 20px auto;
   padding: 30px;
-  box-shadow: 3px 3px 2px #419D78;
+  box-shadow: 3px 3px 2px #E06D06;
   border-radius: 5px;
 }
 
 #img-circle {
   width: 150px;
   border-radius: 50%;
-  border: 2px solid #419D78;
+  border: 2px solid #E06D06;
 }
 
 .img-shadowed {
